<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a9726446.lab2wk3_additionapp.MainActivity">

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <EditText
        android:id="@+id/etFirstNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number|numberSigned|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/etSecondNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number|numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etFirstNum"
        app:layout_constraintTop_toBottomOf="@+id/etFirstNum" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="@+id/etSecondNum"
        app:layout_constraintTop_toBottomOf="@+id/etSecondNum" />

</android.support.constraint.ConstraintLayout>
