<resources>
    <string name="app_name">Lab2Wk3_AdditionApp</string>
    <string name="add">Add</string>
</resources>
